[gd_scene load_steps=10 format=3 uid="uid://c18slyj7slqa1"]

[ext_resource type="Script" uid="uid://b74eqs4vcnc28" path="res://scripts/scanner/scannable_object.gd" id="1_fcp0i"]
[ext_resource type="Script" uid="uid://ceqga0wulqlxf" path="res://scripts/scanner/scannable_visual_feedback.gd" id="2_vmcdt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a8u64"]
albedo_color = Color(0.435294, 1, 0.407843, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ljdro"]
material = SubResource("StandardMaterial3D_a8u64")

[sub_resource type="Curve" id="Curve_a8u64"]
_limits = [-2.0, 2.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ljdro"]
curve = SubResource("Curve_a8u64")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4j3e1"]
emission_shape = 1
emission_sphere_radius = 1.5
angular_velocity_min = -2.00002
angular_velocity_max = 1.99998
orbit_velocity_min = 0.2
orbit_velocity_max = 0.2
orbit_velocity_curve = SubResource("CurveTexture_ljdro")
radial_velocity_min = -2.00002
radial_velocity_max = 1.99998
gravity = Vector3(0, 0, 0)
tangential_accel_min = -2.23517e-06
tangential_accel_max = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lfx07"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_7qlc0"]
material = SubResource("StandardMaterial3D_lfx07")
radius = 0.05
height = 0.1

[node name="ScannableObject" type="Node3D" groups=["scannable"]]
script = ExtResource("1_fcp0i")

[node name="DetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]

[node name="VisualPlaceholder" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_ljdro")

[node name="VisualFeedback" type="Node3D" parent="."]
script = ExtResource("2_vmcdt")
metadata/_custom_type_script = "uid://ceqga0wulqlxf"

[node name="OutlineMesh" type="MeshInstance3D" parent="VisualFeedback"]

[node name="ScanParticles" type="GPUParticles3D" parent="VisualFeedback"]
emitting = false
amount = 20
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_4j3e1")
draw_pass_1 = SubResource("SphereMesh_7qlc0")
